--- a/src/pages/work/2021-03-01-5.md
+++ b/src/pages/work/2021-03-01-5.md
@@ -1,7 +1,7 @@
 ---
 templateKey: blog-post
 image: /img/misc.jpg
-title: "5"
+title: Untitled 5
 materials: Oil, acrylic, and charcoal on canvas
 size: 48" x 60"
 date: 2021-03-01T21:00:29.586Z
