update work, dynamic size/materials

--- a/src/pages/work/2020-09-19-untitled-4.md
+++ b/src/pages/work/2020-09-19-untitled-4.md
@@ -2,8 +2,8 @@
 templateKey: blog-post
 image: /img/4.jpg
 title: Untitled 4
-materials: asdf
-size: asdf
+materials: Oil, acrylic, and charcoal on canvas
+size: 14" x 17"
 date: 2020-09-19T04:44:56.583Z
 description: asdf
 tags:
