add contact page, start /studio setup

--- a/src/pages/work/2020-09-19-untitled-3.md
+++ b/src/pages/work/2020-09-19-untitled-3.md
@@ -1,5 +1,5 @@
 ---
-templateKey: blog-post
+templateKey: work-post
 image: /img/3.jpg
 title: Untitled 3
 materials: Oil, acrylic, and charcoal on canvas
