--- a/src/pages/work/2020-09-19-untitled-4.md
+++ b/src/pages/work/2020-09-19-untitled-4.md
@@ -1,5 +1,5 @@
 ---
-templateKey: blog-post
+templateKey: work-post
 image: /img/4.jpg
 title: Untitled 4
 materials: Oil, acrylic, and charcoal on canvas
