--- a/src/pages/work/2017-01-04-untitled-1.md
+++ b/src/pages/work/2017-01-04-untitled-1.md
@@ -1,5 +1,5 @@
 ---
-templateKey: blog-post
+templateKey: work-post
 title: Untitled 1
 image: /img/art/1.jpg
 materials: Oil, acrylic, and charcoal on canvas
