Update Work “2021-03-02-untitled-8”

--- a/src/pages/work/2021-03-02-untitled-8.md
+++ b/src/pages/work/2021-03-02-untitled-8.md
@@ -1,8 +1,8 @@
 ---
 templateKey: work-post
 image: /img/8.jpg
-title: Untitled 8
+title: Untitled
 date: 2021-03-02T00:54:04.132Z
-materials: Oil, acrylic, and charcoal on canvas
-size: 33.5" x 42"
+materials: Acrylic, charcoal, and oil on canvas
+size: 33.5 x 42 in (85.09 x 106.68 cm)
 ---
