Update Work “2021-03-02-untitled-5”

--- a/src/pages/work/2021-03-02-untitled-5.md
+++ b/src/pages/work/2021-03-02-untitled-5.md
@@ -3,6 +3,6 @@ templateKey: work-post
 image: /img/5.jpg
 title: Untitled 9
 date: 2021-03-02T00:49:56.987Z
-materials: Acrylic, charcoal, and oil on canvas
+materials: Acrylic, charcoal, and oil on paper
 size: 22.5 x 30 in (57.15 x 76.2 cm)
 ---
