--- a/src/pages/work/2021-03-02-untitled-8.md
+++ b/src/pages/work/2021-03-02-untitled-8.md
@@ -1,6 +1,6 @@
 ---
 templateKey: work-post
-image: /img/8.jpg
+image: /img/8-min.jpg
 title: Untitled
 date: 2021-03-02T00:54:04.132Z
 materials: Acrylic, charcoal, and oil on canvas
