--- a/src/pages/work/2021-03-02-untitled-5.md
+++ b/src/pages/work/2021-03-02-untitled-5.md
@@ -1,7 +1,7 @@
 ---
 templateKey: work-post
 image: /img/5-min.jpg
-title: Untitled 9
+title: Untitled (#9)
 date: 2021-03-02T00:49:56.987Z
 materials: Acrylic, charcoal, graphite, and oil on paper
 size: 22.5 x 30 in (57.15 x 76.2 cm)
