--- a/src/pages/work/2016-12-17-untitled-0.md
+++ b/src/pages/work/2016-12-17-untitled-0.md
@@ -1,6 +1,6 @@
 ---
 templateKey: work-post
-image: /img/0-min.jpg
+image: /img/1:500.jpg
 title: Landscape No. 2
 date: 2021-04-03T03:05:19.803Z
 materials: Oil, acrylic, and charcoal on canvas
