--- a/src/pages/work/2021-03-02-untitled-5.md
+++ b/src/pages/work/2021-03-02-untitled-5.md
@@ -1,6 +1,6 @@
 ---
 templateKey: work-post
-image: /img/5-min.jpg
+image: /img/2:500.jpg
 title: Untitled (#9)
 date: 2021-03-02T00:49:56.987Z
 materials: Acrylic, charcoal, graphite, and oil on paper
